[gd_scene load_steps=3 format=3 uid="npc_shop_scene_1"]

[ext_resource path="res://scripts/ui/npc_shop_menu.gd" type="Script" id=1]

[node name="NPCShopMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.1, 0.15, 0.95)

[node name="VBox" type="VBoxContainer" parent="."]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8

[node name="Title" type="Label" parent="VBox"]
text = "Магазин"
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1

[node name="NPCName" type="Label" parent="VBox"]
text = "Торговец"
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="CurrencyDisplay" type="HBoxContainer" parent="VBox"]

[node name="ShellsLabel" type="Label" parent="VBox/CurrencyDisplay"]
text = "Ракушки: 0"
theme_override_font_sizes/font_size = 16

[node name="HSeparator" type="HSeparator" parent="VBox"]

[node name="TabContainer" type="TabContainer" parent="VBox"]
layout_mode = 2

[node name="Buy" type="VBoxContainer" parent="VBox/TabContainer"]
layout_mode = 1

[node name="BuyItems" type="ScrollContainer" parent="VBox/TabContainer/Buy"]
layout_mode = 2

[node name="BuyList" type="VBoxContainer" parent="VBox/TabContainer/Buy/BuyItems"]
layout_mode = 2

[node name="Sell" type="VBoxContainer" parent="VBox/TabContainer"]
layout_mode = 1

[node name="SellItems" type="ScrollContainer" parent="VBox/TabContainer/Sell"]
layout_mode = 2

[node name="SellList" type="VBoxContainer" parent="VBox/TabContainer/Sell/SellItems"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="VBox"]
text = "Закрыть"

